# cashstate

./: .env.example  .gitignore  CLAUDE.md  README.md  budget-plan.md  package-lock.json  package.json  posthog.md  ui-port.md
backend/: .env.example  .flake8  .gitignore  AI_CATEGORIZATION.md  CATEGORIES_FEATURE.md  CRON_JOBS.md  DATABASE_MIGRATION_GUIDE.md  README.md  SCHEMA_FIX_SUMMARY.md  SECURITY.md  SIMPLEFIN_INTEGRATION_GUIDE.md  SNAPSHOTS.md  airport-quest-backend-spec.md  check_categorization_status.py  clear_categories.py  debug_simplefin_sync.py  main.py  pyproject.toml  test_simplefin_direct.py  warnings.md
backend/app/: __init__.py  config.py  cron.py  database.py  dependencies.py  logging_config.py  main.py
backend/app/models/: __init__.py
backend/app/routers/: __init__.py  auth.py  budget_templates.py  budgets.py  categories.py  goals.py  plaid.py  simplefin.py  snapshots.py  sync.py  transactions.py
backend/app/schemas/: __init__.py  auth.py  budget.py  budget_template.py  category.py  common.py  plaid.py  simplefin.py  sync.py  transaction.py
backend/app/services/: __init__.py  auth_service.py  budget_service.py  categorization_service.py  onboarding_service.py  plaid_service.py  simplefin_service.py  snapshot_service.py  sync_service.py
backend/app/utils/: encryption.py
backend/scripts/: categorize_all_transactions.py  seed_airports.py  setup_database.sql
backend/supabase/: MIGRATION_STEPS.md
backend/tests/: __init__.py  conftest.py  test_budget_templates.py  test_complete_run.py  test_complete_simplefin.py  test_simplefin_flow.py
(+127 files in other folders)
